[package]
name = "ao3-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18.0"
crossterm = "0.23.2"
lipsum = "0.8.0"
ao3-rs = { git = "https://github.com/Vizdun/ao3-rs.git", features = ["strum"] }
cursive = { version = "0.18", features = ["toml"] }
strum = "0.24.0"